<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/textura"
    android:fadingEdge="horizontal"
    android:gravity="top" >

    <TextView
        android:id="@+id/TextView05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="62dp"
        android:text="@string/dist2"
        android:textColor="@color/blue"
        android:textColorLink="@color/green"
        android:textSize="@dimen/siz5"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/cald"
        android:textColor="@color/glow"
        android:textSize="@dimen/siz1"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:text="@string/old1"
        android:textSize="@dimen/siz4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView02"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView05"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:text="@string/dist1"
        android:textColorLink="@color/red"
        android:textSize="@dimen/siz4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView02"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="95dp"
        android:text="@string/new1"
        android:textSize="@dimen/siz4"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView03"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/TextView01"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="14dp"
        android:text="@string/lat"
        android:textColor="@color/green"
        android:textSize="@dimen/siz3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView04"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/lon"
        android:textColor="@color/green"
        android:textColorLink="@color/green"
        android:textSize="@dimen/siz3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView03"
        android:layout_below="@+id/TextView04"
        android:layout_marginTop="18dp"
        android:text="@string/lat"
        android:textColor="@color/green"
        android:textSize="@dimen/siz3"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/TextView04"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="14dp"
        android:text="@string/lon"
        android:textColor="@color/green"
        android:textColorLink="@color/green"
        android:textSize="@dimen/siz3"
        android:textStyle="bold" />

</RelativeLayout>
